--- a/Components/Accordion/accordion.less
+++ b/Components/Accordion/accordion.less
@@ -1,5 +1,6 @@
 .rosary-prayers, .prayer-each-day, .pope-st-gregory {
     max-width: 900px;
+    margin-left: 2%;
 
     @media @tablet {
         margin: 0 8%;
@@ -13,7 +14,6 @@
 .rosary-prayers-header, .prayer-each-day-header, .pope-st-gregory-header {
     margin-top: 2rem;
     border-bottom: solid black 1px;
-    margin-left: 2%;
 
     @media @tablet {
         display: flex;
@@ -24,7 +24,6 @@
         padding: 10px;
         border-radius: 15px;
         border-bottom: 0;
-        margin-left: 0;
 
         &:hover {
             border: 1px solid purple;
@@ -47,13 +46,6 @@
         transform: rotate(180deg);
         padding-left: 0px;
         padding-right: 10px;
-    }
-
-    .prayer-each-day-header-text {
-
-        p {
-            margin: 0;
-        }
     }
 }
 
